# storage/api-docs/api-docs.json
@@ -365,6 +365,42 @@
                 ]
             }
         },
+        "/api/v2/files": {
+            "post": {
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Upload a file",
+                "description": "Returns newly uploaded file",
+                "operationId": "fileUpload",
+                "requestBody": {
+                    "description": "Created city object",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "file": {
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v2/admin/products": {
             "get": {
                 "tags": [
